[tool.poetry]
name = "clustering"
version = "0.1.0"
description = ""
authors = ["Christofer Berruz Chungata <cberruzc@my.bridgeport.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
click = "^8.1.7"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
attrs = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
